samples/_failures_safe/1761605698_6e8ec8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d7fe6a9.c: In function ‘main’:
./samples/SAFE/__tmp_0d7fe6a9.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
